--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,6 +361,16 @@ label {
     background-color: #ffffff;
 }
 
+.skills-container {
+    height: 800px;
+    width: 1200px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #skills h2 {
     position: absolute;
     font-family: var(--text-2);
@@ -406,50 +416,51 @@ label {
     padding: 10px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     position: absolute;
+    background-color: #ffffff;
 }
 
 .css {
     height: 150px;
     width: 150px;
-    top: 400px;
-    left: 10px;
+    top: 33%;
     -webkit-animation: vibrate-1 0.3s linear infinite both;
     animation: vibrate-1 0.3s linear infinite both;
+    left: 50%;
 }
 
 
 .html {
     height: 180px;
     width: 180px;
-    bottom: 300px;
-    left: 400px;
+    top: 5%;
+    left: 25%;
     -webkit-animation: vibrate-1 0.5s linear infinite both;
     animation: vibrate-1 0.5s linear infinite both;
 }
 
 .github {
-    height: 300px;
-    width: 300px;
-    top: 100px;
-    left: 300px;
+    height: 220px;
+    width: 220px;
+    bottom: 100px;
+    right: -10px;
     -webkit-animation: vibrate-1 1s linear infinite both;
     animation: vibrate-1 1s linear infinite both;
 }
 
 .django {
-    height: 350px;
-    width: 350px;
-    top: 100px;
-    left: -600px;
+    height: 250px;
+    width: 250px;
+    top: 17%;
+    right: 5%;
     -webkit-animation: vibrate-1 .5s linear infinite both;
     animation: vibrate-1 .5s linear infinite both;
 }
 
 .js {
-    height: 280px;
-    width: 280px;
-    top: 500px;
-    left: -600px;
+    height: 200px;
+    width: 200px;
+    top: 64%;
+    left: 0;
     -webkit-animation: vibrate-1 .8s linear infinite both;
     animation: vibrate-1 .8s linear infinite both;
 }
@@ -457,8 +468,8 @@ label {
 .postgress {
     height: 200px;
     width: 200px;
-    top: 660px;
-    left: 336px;
+    top: 3%;
+    right: 30%;
     -webkit-animation: vibrate-1 1.2s linear infinite both;
     animation: vibrate-1 1.2s linear infinite both;
 }
@@ -490,7 +501,7 @@ label {
 }
 
 .github img {
-    transform: rotate(30deg);
+    transform: rotate(17deg);
 }
 
 .postgress img {
