--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,11 +168,11 @@ label {
 
 
 #skills h2,
-#projects h2 {
+#projects h2,
+#about h2 {
     position: absolute;
     font-family: var(--text-2);
     left: 50%;
-    top: 50px;
     transform: translate(-50%, -50%);
     font-size: 85px;
     z-index: 100;
@@ -414,18 +414,18 @@ label {
     animation: vibrate-1 1.2s linear infinite both;
 }
 
-.github-link {
+.github-icon {
     animation: vibrate-1 1.3s linear infinite both;
 }
 
 /* skills */
 #skills h2 {
-    margin-top: 20px;
+    margin-top: 90px;
 }
 
 .skills-container {
-    height: 800px;
-    width: 1200px;
+    height: 700px;
+    width: 1100px;
     position: absolute;
     display: flex;
     justify-content: center;
@@ -477,8 +477,8 @@ label {
 }
 
 .css {
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
     top: 33%;
     -webkit-animation: vibrate-1 0.3s linear infinite both;
     animation: vibrate-1 0.3s linear infinite both;
@@ -487,8 +487,8 @@ label {
 
 
 .html {
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
     top: 10%;
     left: 25%;
     -webkit-animation: vibrate-1 0.5s linear infinite both;
@@ -496,8 +496,8 @@ label {
 }
 
 .github {
-    height: 180px;
-    width: 180px;
+    height: 150px;
+    width: 150px;
     bottom: 10%;
     right: 7%;
     -webkit-animation: vibrate-1 1s linear infinite both;
@@ -505,8 +505,8 @@ label {
 }
 
 .django {
-    height: 200px;
-    width: 200px;
+    height: 185px;
+    width: 185px;
     top: 25%;
     right: 10%;
     -webkit-animation: vibrate-1 .5s linear infinite both;
@@ -514,17 +514,17 @@ label {
 }
 
 .js {
-    height: 180px;
-    width: 180px;
-    top: 68%;
+    height: 150px;
+    width: 150px;
+    top: 70%;
     left: 10%;
     -webkit-animation: vibrate-1 .8s linear infinite both;
     animation: vibrate-1 .8s linear infinite both;
 }
 
 .postgress {
-    height: 190px;
-    width: 190px;
+    height: 170px;
+    width: 170px;
     top: 8%;
     right: 30%;
     -webkit-animation: vibrate-1 1.2s linear infinite both;
@@ -585,7 +585,7 @@ label {
 }
 
 #projects h2 {
-    margin-top: 50px;
+    margin-top: 150px;
 }
 
 .projects-container {
@@ -733,12 +733,77 @@ footer {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    border: 1px solid var(--link);
 }
 
 .rights {
+    margin-top: 10px;
+}
+
+/* about me */
+
+#about {
+    position: relative;
+    height: 100vh;
+}
+
+#about h2 {
+    top: 10%;
+}
+
+.me-img {
+    width: 500px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.me-img img {
+    object-fit: cover;
+    position: absolute;
+    filter: drop-shadow(2px 1px 5px #000000);
+}
+
+.half {
+    width: 50%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
     margin-top: 50px;
 }
 
+.half-two {
+    width: 40%;
+}
+
+.half p {
+    font-family: var(--text);
+    line-height: 30px;
+    letter-spacing: 2px;
+    text-align: center;
+    font-size: 18px;
+}
+
+.half a {
+    font-family: var(--text);
+
+}
+
+.half a:hover {
+    color: var(--blue);
+}
+
+.cv {
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-size: 35px;
+}
 
 
 @media screen and (max-width: 1190px) {
