--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,7 +347,7 @@ label {
     line-height: 60px;
     letter-spacing: 3px;
     position: relative;
-    text-align: left;
+    text-align: center;
 
 }
 
@@ -360,7 +360,7 @@ label {
     display: flex;
     align-items: center;
     font-family: var(--text-2);
-    justify-content: left;
+    justify-content: center;
 }
 
 .main-links a {
