--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -600,7 +600,7 @@ label {
 }
 
 #projects h2 {
-    margin-top: 150px;
+    margin-top: 90px;
 }
 
 .projects-container {
@@ -739,6 +739,68 @@ label {
 
 }
 
+/* ---------- */
+.info-card {
+    position: relative;
+    padding: 20px;
+    clip-path: circle(20% at 96% 8%);
+    transition: all ease-in-out 0.3s;
+    background-color: #ffffff;
+    cursor: pointer;
+    z-index: 10000;
+}
+
+.card__infoicon {
+    position: absolute;
+    top: 1px;
+    right: -1px;
+    color: #000000;
+    transition: ease-out 0.3s;
+}
+
+.card__description {
+    margin: auto;
+    font-size: 15px;
+    font-family: var(--text);
+    text-align: center;
+}
+
+.card__credits {
+    margin: 0;
+    padding: 4px 0;
+    font-size: 1.1em;
+}
+
+.card__reference {
+    display: inline-block;
+    border-bottom: 1px solid transparent;
+    color: #0099ff;
+    text-decoration: none;
+    transition: ease-in 0.3s;
+}
+
+.card__reference:hover {
+    border-bottom-color: #0099ff;
+}
+
+.info-card:hover,
+.info-card:focus {
+    clip-path: circle(75%);
+    border-radius: 20px;
+    box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.12), 0px 3px 18px rgba(0, 0, 0, 0.08);
+    background: #ffffff;
+    outline: none;
+}
+
+.info-card:hover .card__infoicon,
+.info-card:focus .card__infoicon {
+    opacity: 0;
+}
+
+.info-card:focus {
+    box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.12), 0px 3px 18px rgba(0, 0, 0, 0.08), 0px 0px 0px 4px rgba(0, 0, 0, 0.2);
+}
+
 /* footer */
 .footer {
     height: 200px;
@@ -836,6 +898,7 @@ label {
 
 
 @media screen and (max-width: 1190px) {
+
     /* home */
     .main-txt {
         padding: 10px;
@@ -867,7 +930,9 @@ label {
         width: 120px;
     }
 
-    #skills h2, #projects h2, #about h2 {
+    #skills h2,
+    #projects h2,
+    #about h2 {
         font-size: 60px;
     }
 
@@ -885,43 +950,43 @@ label {
         top: 33%;
         left: 50%;
     }
-    
-    
+
+
     .html {
         height: 100px;
         width: 100px;
         top: 10%;
         left: 30%;
     }
-    
+
     .github {
         height: 120px;
         width: 120px;
         bottom: 28%;
         right: 17%;
     }
-    
+
     .django {
         height: 115px;
         width: 115px;
         top: 25%;
         right: 15%;
     }
-    
+
     .js {
         height: 120px;
         width: 120px;
         top: 56%;
         left: 10%;
     }
-    
+
     .postgress {
         height: 140px;
         width: 140px;
         top: 8%;
         right: 33%;
     }
-    
+
     .python {
         height: 120px;
         width: 120px;
@@ -985,43 +1050,43 @@ label {
         top: 30%;
         left: 33%;
     }
-    
-    
+
+
     .html {
         height: 80px;
         width: 80px;
         top: 10%;
         left: 7%;
     }
-    
+
     .github {
         height: 105px;
         width: 105px;
         bottom: 44%;
         right: 35%;
     }
-    
+
     .django {
         height: 85px;
         width: 85px;
         top: 25%;
         right: 19%;
     }
-    
+
     .js {
         height: 90px;
         width: 90px;
         top: 5%;
         left: 57%;
     }
-    
+
     .postgress {
         height: 110px;
         width: 110px;
         top: 8%;
         right: 50%;
     }
-    
+
     .python {
         height: 90px;
         width: 90px;
@@ -1048,7 +1113,9 @@ label {
         margin-top: 20px;
     }
 
-    #skills h2, #projects h2, #about h2 {
+    #skills h2,
+    #projects h2,
+    #about h2 {
         font-size: 40px;
         letter-spacing: 3px;
     }
@@ -1107,10 +1174,18 @@ label {
 }
 
 @media screen and (max-width: 550px) {
-    #skills h2, #projects h2, #about h2 {
+
+    #skills h2,
+    #projects h2,
+    #about h2 {
         font-size: 30px;
     }
+
     #skills h2 {
+        margin-top: 30px;
+    }
+
+    #projects h2 {
         margin-top: 30px;
     }
 
@@ -1147,7 +1222,7 @@ label {
         margin-bottom: -95px;
         position: relative;
     }
-    
+
 
     .menu__link {
         font-size: 40px;
@@ -1191,43 +1266,43 @@ label {
         top: 27%;
         left: 30%;
     }
-    
-    
+
+
     .html {
         height: 80px;
         width: 80px;
         top: 15%;
         left: 7%;
     }
-    
+
     .github {
         height: 70px;
         width: 70px;
         bottom: 35%;
         right: 35%;
     }
-    
+
     .django {
         height: 80px;
         width: 80px;
         top: 24%;
         right: 12%;
     }
-    
+
     .js {
         height: 90px;
         width: 90px;
         top: 9%;
         left: 41%;
     }
-    
+
     .postgress {
         height: 75px;
         width: 75px;
         top: 39%;
         right: 9%;
     }
-    
+
     .python {
         height: 90px;
         width: 90px;
