Change skills container height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1248,6 +1248,10 @@ label {
         width: 300px;
     }
 
+    .skills-container {
+        height: 595px;
+    }
+
     .s-bulb {
         height: 70px;
         left: 43px;
