--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -828,6 +828,7 @@ label {
     position: relative;
     height: 100vh;
     margin-top: -100vh;
+    overflow: hidden;
 }
 
 #about h2 {
@@ -845,22 +846,25 @@ label {
 }
 
 .me-img {
-    width: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+    position: absolute;
+    z-index: -1;
+    bottom: -7%;
+    right: -15%;
 }
 
 .me-img img {
-    object-fit: cover;
     position: absolute;
     filter: drop-shadow(2px 1px 5px #000000);
+    height: 600px;
 }
 
 .half {
-    width: 65%;
+    width: 78%;
     margin-top: 80px;
 }
 
@@ -874,12 +878,7 @@ label {
     line-height: 23px;
     letter-spacing: 1px;
     text-align: center;
-    font-size: 18px;
-}
-
-.half a {
-    font-family: var(--text-2);
-
+    font-size: 19px;
 }
 
 .half a:hover {
@@ -890,6 +889,7 @@ label {
     margin-top: 20px;
     text-transform: uppercase;
     font-size: 35px;
+    font-family: var(--text-2);
 }
 
 .bck-link {
@@ -924,7 +924,16 @@ label {
         }
 
         .hero-img {
-            height: 400px;
+            height: 474px;
+        }
+
+        .me-img {
+            bottom: -5%;
+            right: 0%;
+        }
+
+        .me-img img {
+            height: 420px;
         }
 
         .icon {
@@ -1077,7 +1086,7 @@ label {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .half-two {
+    .me-img{
         display: none;
     }
 
@@ -1313,6 +1322,7 @@ label {
 
     .bck-link {
         top: -5%;
+        font-size: 20px;
     }
 
     .skills-container,
