--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -764,9 +764,10 @@ label {
 
 .card__description {
     margin: auto;
-    font-size: 15px;
+    font-size: 14px;
     font-family: var(--text);
     text-align: center;
+    text-transform: uppercase;
 }
 
 .card__credits {
