Unset overflow for wrapper for mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1339,6 +1339,10 @@ label {
 
 @media screen and (max-width: 550px) {
 
+    .wrapper {
+        overflow: unset;
+    }
+
     #skills h2,
     #projects h2,
     #about h2 {
