--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -913,29 +913,45 @@ label {
     justify-content: center;
 }
 
-.me-img {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    position: absolute;
-    z-index: -1;
+
+.me-imgs {
+    position: fixed;
     bottom: 0;
-    right: -15%;
+    height: 700px;
+    right: 0%;
 }
 
-.me-img img {
-    position: absolute;
+.me-img {
     filter: drop-shadow(2px 1px 5px #000000);
+    transform: rotate(358deg);
+    position: fixed;
     height: 600px;
-    bottom: -368px;
+    bottom: -10%;
+}
+
+.me-img-two {
+    filter: drop-shadow(2px 1px 5px #000000);
+    height: 100px;
+    transform: rotate(333deg);
+    right: -19%;
+    position: relative;
+    top: -20%;
+}
+
+.me-img-three {
+    filter: drop-shadow(2px 1px 5px #000000);
+    height: 228px;
+    top: -65px;
+    transform: rotate(31deg);
+    right: 30%;
+    position: relative;
 }
 
 .half {
     width: 100%;
     margin-top: 80px;
     padding: 25px;
+    overflow: hidden;
 }
 
 .half-two {
@@ -1008,21 +1024,35 @@ label {
             width: 160px;
         }
 
-        .half p, ol {
+        .me-imgs {
+            height: 360px;
+        }
+
+        .me-img {
+            filter: drop-shadow(2px 1px 5px #000000);
+            transform: rotate(334deg);
+            position: fixed;
+            height: 425px;
+            bottom: -22%;
+            right: -7%;
+        }
+
+        .me-img-three {
+            height: 165px;
+        }
+
+        .me-img-two {
+            height: 64px;
+            top: -32%;
+        }
+
+        .half p,
+        .half ol {
             line-height: 18px;
         }
 
         .hero-img {
             height: 474px;
-        }
-
-        .me-img {
-            bottom: -5%;
-            right: 0%;
-        }
-
-        .me-img img {
-            height: 420px;
         }
 
         .icon {
@@ -1033,7 +1063,7 @@ label {
         #skills h2,
         #projects h2,
         #about h2 {
-            font-size: 70px;
+            font-size: 56px;
         }
 
         .s-snail {
@@ -1099,6 +1129,18 @@ label {
     #projects h2,
     #about h2 {
         font-size: 60px;
+    }
+
+    #about {
+        overflow: unset;
+        height: 100%;
+        min-height: 100vh;
+    }
+
+    #about h2 {
+        margin-top: 126px;
+        margin-bottom: -95px;
+        position: relative;
     }
 
     .skills-container {
@@ -1175,13 +1217,20 @@ label {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .me-img{
+    .me-img,
+    .me-img-two ,
+    .me-img-three {
         display: none;
     }
 
     .half {
         width: 80%;
         padding: 30px;
+    }
+
+    .bck-link {
+        top: -5%;
+        font-size: 20px;
     }
 }
 
